# Progetto-Robotica

./: Descrizione progetto
cooperative_localization/: CMakeLists.txt  package.xml
cooperative_localization/include/: data_loader.h  ekf_centralized.h
cooperative_localization/src/: centralized_node.cpp  data_loader.cpp  ekf_centralized.cpp
